@@ -18,61 +18,45 @@
  */
 package org.apache.pinot.common.utils.fetcher;
 
-import com.google.common.base.Preconditions;
 import java.io.File;
 import java.net.URI;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.function.Supplier;
+import javax.annotation.Nullable;
 import org.apache.pinot.common.auth.AuthConfig;
 import org.apache.pinot.common.auth.AuthProviderUtils;
 import org.apache.pinot.spi.crypt.PinotCrypter;
 import org.apache.pinot.spi.crypt.PinotCrypterFactory;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.utils.CommonConstants;
-import org.checkerframework.checker.nullness.qual.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 
 public class SegmentFetcherFactory {
-  private final static SegmentFetcherFactory INSTANCE = new SegmentFetcherFactory();
+  private SegmentFetcherFactory() {
+  }
 
-  static final String SEGMENT_FETCHER_CLASS_KEY_SUFFIX = ".class";
-  private static final String PROTOCOLS_KEY = "protocols";
-  private static final String ENCODED_SUFFIX = ".enc";
-  private static final String AUTH_KEY = CommonConstants.KEY_OF_AUTH;
+  public static final String SEGMENT_FETCHER_CLASS_KEY_SUFFIX = ".class";
+  public static final String PROTOCOLS_KEY = "protocols";
+  public static final String ENCODED_SUFFIX = ".enc";
 
   private static final Logger LOGGER = LoggerFactory.getLogger(SegmentFetcherFactory.class);
-  private static final Random RANDOM = new Random();
-
-  private final Map<String, SegmentFetcher> _segmentFetcherMap = new HashMap<>();
-  private final SegmentFetcher _httpSegmentFetcher = new HttpSegmentFetcher();
-  private final SegmentFetcher _pinotFSSegmentFetcher = new PinotFSSegmentFetcher();
-
-  private SegmentFetcherFactory() {
-    // left blank
-  }
-
-  public static SegmentFetcherFactory getInstance() {
-    return INSTANCE;
-  }
+  private static final Map<String, SegmentFetcher> SEGMENT_FETCHER_MAP = new HashMap<>();
+  private static final SegmentFetcher HTTP_SEGMENT_FETCHER = new HttpSegmentFetcher();
+  private static final SegmentFetcher PINOT_FS_SEGMENT_FETCHER = new PinotFSSegmentFetcher();
 
   /**
    * Initializes the segment fetcher factory. This method should only be called once.
    */
   public static void init(PinotConfiguration config)
       throws Exception {
-    getInstance().initInternal(config);
-  }
-
-  private void initInternal(PinotConfiguration config)
-      throws Exception {
-    _httpSegmentFetcher.init(config); // directly, without sub-namespace
-    _pinotFSSegmentFetcher.init(config); // directly, without sub-namespace
+    HTTP_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
+    PINOT_FS_SEGMENT_FETCHER.init(config); // directly, without sub-namespace
 
     List<String> protocols = config.getProperty(PROTOCOLS_KEY, Collections.emptyList());
     for (String protocol : protocols) {
@@ -93,22 +77,22 @@ public class SegmentFetcherFactory {
         }
       } else {
         LOGGER.info("Creating segment fetcher for protocol: {} with class: {}", protocol, segmentFetcherClassName);
-        segmentFetcher = (SegmentFetcher) Class.forName(segmentFetcherClassName).newInstance();
+        segmentFetcher = (SegmentFetcher) Class.forName(segmentFetcherClassName).getConstructor().newInstance();
       }
 
-      AuthConfig authConfig = AuthProviderUtils.extractAuthConfig(config, AUTH_KEY);
-
       PinotConfiguration subConfig = config.subset(protocol);
-      AuthConfig subAuthConfig = AuthProviderUtils.extractAuthConfig(subConfig, AUTH_KEY);
+      Map<String, Object> subConfigMap = subConfig.toMap();
 
-      Map<String, Object> subConfigMap = config.subset(protocol).toMap();
+      // Put global auth properties into sub-config if sub-config does not have auth properties
+      AuthConfig authConfig = AuthProviderUtils.extractAuthConfig(config, CommonConstants.KEY_OF_AUTH);
+      AuthConfig subAuthConfig = AuthProviderUtils.extractAuthConfig(subConfig, CommonConstants.KEY_OF_AUTH);
       if (subAuthConfig.getProperties().isEmpty() && !authConfig.getProperties().isEmpty()) {
-        authConfig.getProperties().forEach((key, value) -> subConfigMap.put(AUTH_KEY + "." + key, value));
+        authConfig.getProperties()
+            .forEach((key, value) -> subConfigMap.put(CommonConstants.KEY_OF_AUTH + "." + key, value));
       }
 
       segmentFetcher.init(new PinotConfiguration(subConfigMap));
-
-      _segmentFetcherMap.put(protocol, segmentFetcher);
+      SEGMENT_FETCHER_MAP.put(protocol, segmentFetcher);
     }
   }
 
@@ -117,11 +101,7 @@ public class SegmentFetcherFactory {
    * ({@link HttpSegmentFetcher} for "http" and "https", {@link PinotFSSegmentFetcher} for other protocols).
    */
   public static SegmentFetcher getSegmentFetcher(String protocol) {
-    return getInstance().getSegmentFetcherInternal(protocol);
-  }
-
-  private SegmentFetcher getSegmentFetcherInternal(String protocol) {
-    SegmentFetcher segmentFetcher = _segmentFetcherMap.get(protocol);
+    SegmentFetcher segmentFetcher = SEGMENT_FETCHER_MAP.get(protocol);
     if (segmentFetcher != null) {
       return segmentFetcher;
     } else {
@@ -129,9 +109,9 @@ public class SegmentFetcherFactory {
       switch (protocol) {
         case CommonConstants.HTTP_PROTOCOL:
         case CommonConstants.HTTPS_PROTOCOL:
-          return _httpSegmentFetcher;
+          return HTTP_SEGMENT_FETCHER;
         default:
-          return _pinotFSSegmentFetcher;
+          return PINOT_FS_SEGMENT_FETCHER;
       }
     }
   }
@@ -141,7 +121,7 @@ public class SegmentFetcherFactory {
    */
   public static void fetchSegmentToLocal(URI uri, File dest)
       throws Exception {
-    getInstance().fetchSegmentToLocalInternal(uri, dest);
+    getSegmentFetcher(uri.getScheme()).fetchSegmentToLocal(uri, dest);
   }
 
   /**
@@ -149,13 +129,7 @@ public class SegmentFetcherFactory {
    */
   public static void fetchSegmentToLocal(String uri, File dest)
       throws Exception {
-    getInstance().fetchSegmentToLocalInternal(new URI(uri), dest);
-  }
-
-  private void fetchSegmentToLocalInternal(URI uri, File dest)
-      throws Exception {
-    // caller untars
-    getSegmentFetcher(uri.getScheme()).fetchSegmentToLocal(uri, dest);
+    fetchSegmentToLocal(new URI(uri), dest);
   }
 
   /**
@@ -167,17 +141,17 @@ public class SegmentFetcherFactory {
    * @return the untared directory
    * @throws Exception
    */
-  public static File fetchAndStreamUntarToLocal(String uri, File tempRootDir,
-      long maxStreamRateInByte, AtomicInteger attempts)
-      throws Exception {
-    return getInstance().fetchAndStreamUntarToLocalInternal(new URI(uri), tempRootDir, maxStreamRateInByte, attempts);
-  }
-
-  private File fetchAndStreamUntarToLocalInternal(URI uri, File tempRootDir,
-      long maxStreamRateInByte, AtomicInteger attempts)
+  public static File fetchAndStreamUntarToLocal(URI uri, File tempRootDir, long maxStreamRateInByte,
+      AtomicInteger attempts)
       throws Exception {
     return getSegmentFetcher(uri.getScheme()).fetchUntarSegmentToLocalStreamed(uri, tempRootDir, maxStreamRateInByte,
         attempts);
+  }
+
+  public static File fetchAndStreamUntarToLocal(String uri, File tempRootDir, long maxStreamRateInByte,
+      AtomicInteger attempts)
+      throws Exception {
+    return fetchAndStreamUntarToLocal(new URI(uri), tempRootDir, maxStreamRateInByte, attempts);
   }
 
   /**
@@ -185,18 +159,7 @@ public class SegmentFetcherFactory {
    * @param uri remote segment location
    * @param dest local file
    */
-  public static void fetchAndDecryptSegmentToLocal(String uri, File dest, String crypterName)
-      throws Exception {
-    getInstance().fetchAndDecryptSegmentToLocalInternal(uri, dest, crypterName);
-  }
-
-  // uris have equal weight to be selected for segment download
-  public static void fetchAndDecryptSegmentToLocal(List<URI> uris, File dest, String crypterName)
-          throws Exception {
-    getInstance().fetchAndDecryptSegmentToLocalInternal(uris, dest, crypterName);
-  }
-
-  private void fetchAndDecryptSegmentToLocalInternal(String uri, File dest, String crypterName)
+  public static void fetchAndDecryptSegmentToLocal(String uri, File dest, @Nullable String crypterName)
       throws Exception {
     if (crypterName == null) {
       fetchSegmentToLocal(uri, dest);
@@ -211,16 +174,16 @@ public class SegmentFetcherFactory {
     }
   }
 
-  private void fetchAndDecryptSegmentToLocalInternal(@NonNull List<URI> uris, File dest, String crypterName)
-          throws Exception {
-    Preconditions.checkArgument(!uris.isEmpty(), "empty uris passed into the fetchAndDecryptSegmentToLocalInternal");
-    URI uri = uris.get(RANDOM.nextInt(uris.size()));
+  public static void fetchAndDecryptSegmentToLocal(String segmentName, String scheme, Supplier<List<URI>> uriSupplier,
+      File dest, @Nullable String crypterName)
+      throws Exception {
+    SegmentFetcher segmentFetcher = getSegmentFetcher(scheme);
     if (crypterName == null) {
-      fetchSegmentToLocal(uri, dest);
+      segmentFetcher.fetchSegmentToLocal(segmentName, uriSupplier, dest);
     } else {
       // download
       File tempDownloadedFile = new File(dest.getPath() + ENCODED_SUFFIX);
-      fetchSegmentToLocal(uri, tempDownloadedFile);
+      segmentFetcher.fetchSegmentToLocal(segmentName, uriSupplier, tempDownloadedFile);
 
       // decrypt
       PinotCrypter crypter = PinotCrypterFactory.create(crypterName);
